# aoc2020

./: Cargo.toml
data/: q19_2
examples/: q1.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q2.rs  q20.rs  q21.rs  q3.rs  q4.rs  q5.rs  q6.rs  q7.rs  q8.rs  q9.rs  template.rs
src/: main.rs  q2.rs  q3.rs  util.rs
