[package]
name = "aoc2020"
version = "0.1.0"
authors = ["ozan kececioglu <ozankececioglu@gmail.com>"]
edition = "2018"
autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
linked_hash_set = "0.1.4"
itertools = "0.10.0"
multiarray = "0.1.3"
arrayvec = "0.6.0"
num = "0.4.0"
cargo-expand = "1.0.6"
syn = "1.0.68"
quote = "1.0.9"
trybuild = "1.0.41"
anyhow = "1.0.40"
thiserror = "1.0.24"